# tidepy

./: BUILD  CMakeLists.txt  HACKING  LICENSE  README.md  customcompleter.qrc  debugger_files.cpp  debugger_files.h  debugger_files.qrc  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  tidepy.pro
app_data/resources/: python_builtins.txt  wordlist.txt
editor/: decorated_editor_base.cpp  decorated_editor_base.h  editor.cpp  editor.h  extraselections.cpp  extraselections.h  find.hpp  grammar_base.hpp  grammar_utils.hpp  isyntax_highlight.cpp  isyntax_highlight.h  syntaxhighlighter.cpp  syntaxhighlighter.h  texteditbase.cpp  texteditbase.h
editor/actions/: doc_action_shifttab.cpp  doc_action_shifttab.h
editor/filters/: filters.cpp  filters.h
editor/lang_highlighters/: hightlighter_python.cpp  hightlighter_python.h
py_editor_tools/: debugger_controller.cpp  debugger_controller.h  debugger_json_reader.cpp  debugger_json_reader.h  debugger_objects.h  debugger_proxy.cpp  debugger_proxy.h  extract_structure.py
py_editor_tools/py_debugger/: py_bdb.py  py_cmd.py  py_dbg.py  py_debugger_main.py
utils/: ansi_escape.cpp  ansi_escape.h  pythoninfo.cpp  pythoninfo.h
widgets/: debugger_console.cpp  debugger_console.h  debugger_console.ui  dir_selector_widget.cpp  dir_selector_widget.h  dir_selector_widget.ui  documentsviewer.cpp  documentsviewer.h  documentsviewer.ui  filestructure.cpp  filestructure.h  filestructure.ui  frames_delegate.cpp  frames_delegate.h  frames_widget.cpp  frames_widget.h  line_pos_widgets.cpp  line_pos_widgets.h  line_pos_widgets.ui  projecttree_widget.cpp  projecttree_widget.h  projecttreemanager_widget.cpp  projecttreemanager_widget.h  projecttreemanager_widget.ui  python_settings_widget.cpp  python_settings_widget.h  python_settings_widget.ui  search_result.cpp  search_result.h  search_widget.cpp  search_widget.h  search_widget.ui  treectrl.cpp  treectrl.h  vars_delegate.cpp  vars_delegate.h  vars_widget.cpp  vars_widget.h  vars_widget.ui
